    by Christopher Hylands <cxh@EECS.Berkeley.EDU>.
-------------------------------------------------------------------------------
20 Aug 96:
  o Search for the TclX init files and library directories in the same manner
    as Tcl/Tk.  This removes the tclx/tkx_library_env, tclx/tkx_init libraries
    Tcl variables.  This removes some of the flexability, but makes it
    consistent with Tcl/Tk and simplifies Win32 port.
   (* potential incompatibility *)
===============================================================================
17 Sep 96: Released TclX 7.6.0 Beta 1
===============================================================================
17 Sep 96:
  o Added the cconcat and lcontain commands.
-------------------------------------------------------------------------------
17 Sep 96:
  o New profiler alogrithm that correctly handles certain uplevel cases.
  o Added -eval option to the profile command, allowing capturing eval stacks
    instead of scope stacks.
-------------------------------------------------------------------------------
 3 Oct 96:
  o Integrated support for building both shared and static libraries at the
    same time from Jan Nijtmans' <nijtmans@nici.kun.nl> TclX plus patch.
  o Deprecated the mkdir, rmdir, unlink and frename commands in favor of the
    new file subcommands. Compatbility with these commands is still supported
    for old scripts via procedures in the TclX library.
-------------------------------------------------------------------------------
19 Oct 96:
  o Modified to build pkgIndex.tcl files and install them so that Tcl
    auto_loading will find them.
  o Removed --arch configure option.  With new pkgIndex.tcl changes, its not
    much good unless Tcl and Tk supported it.
===============================================================================
20 Oct 96: Released TclX 7.6.0 Beta 2
===============================================================================